--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,12 @@ body {
     background-color: rgb(241, 241, 241);
     padding: 40px;
 }
+.todos {
+    width: 200px;
+}
+.todo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+}
